<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.profile.ProfileFragment">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/profile" />

        <ImageView
            android:id="@+id/icEditProfile"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_add"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/edit_profile_pic" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

</LinearLayout>