<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                style="@style/TextAppearance.Material3.TitleLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createdat"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.Material3.LabelMedium" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_delete"
            android:layout_gravity="end"
            android:layout_margin="4dp"
            android:contentDescription="@string/delete" />

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>